# httpbin-rs

./: Cargo.toml  README.md
httpbin/: Cargo.toml
httpbin/example/: main.rs
httpbin/src/: client.rs  error.rs  http_methods.rs  images.rs  lib.rs  request.rs  response.rs  serde_utils.rs
